fixed scaling on small screens

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -1,6 +1,6 @@
 body {
 font-family: Arial, Helvetica, sans-serif;
-font-size: 2.5vmax;
+font-size: 1.4rem;
 color: #e0def4;
 background-color: #191724; 
 }
